assign org to uplaod, update

--- a/docker-compose/.env.template
+++ b/docker-compose/.env.template
@@ -21,7 +21,6 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=swiss-parcs-ims
 
 # MinIO configuration
-
+# A bucket and a user with access key needs to be created manually
 MINIO_ROOT_USER=swiss-parcs-ims
 MINIO_ROOT_PASSWORD=swiss-parcs-ims
-MINIO_DEFAULT_BUCKETS=swiss-parcs-ims
