--- a/docker-compose/Caddyfile.template
+++ b/docker-compose/Caddyfile.template
@@ -1,3 +1,13 @@
 myhost.mydomain.com {
     reverse_proxy app:3000
 }
+
+# Make minio UI available
+myhost.mydomain.com:9001 {
+     reverse_proxy minio:9001
+}
+
+# Make pg_admin UI available
+myhost.mydomain.com:5050 {
+     reverse_proxy pgadmin:5050
+}
