--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -8,12 +8,16 @@ services:
       - "80:80"
       - "443:443"
       - "443:443/udp"
+      - "9001:9001" # minio UI
+      - "9001:9001/udp"
+      - "5050:5050" # pgadmin
+      - "5050:5050/udp"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - ./data/caddy:/data
       - ./data/certs:/certs
     networks:
-        - default
+        - external
         - internal
 
   app:
@@ -27,8 +31,8 @@ services:
   postgres:
     image: postgres:latest
     container_name: postgres
-    ports:
-      - "5432:5432"
+#    ports:
+#      - "5432:5432"
     env_file:
       - .env
     volumes:
@@ -39,9 +43,9 @@ services:
   minio:
     image: minio/minio:latest
     container_name: minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
+#    ports:
+#      - "9000:9000"
+#      - "9001:9001"
     env_file:
       - .env
     volumes:
@@ -52,4 +56,6 @@ services:
 
 networks:
   internal:
+    driver: bridge
+  external:
     driver: bridge
