--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,17 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: unless-stopped
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@localhost.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
   minio:
     image: minio/minio:latest
     container_name: minio
@@ -46,4 +57,6 @@ volumes:
     postgres-data:
       driver: local
     minio-data:
+      driver: local
+    pgadmin-data:
       driver: local
