add task list view, add breadcrumb nav, optimisations and updates

--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
     "@payload-enchants/better-localized-fields": "^1.2.2",
     "@payload-enchants/docs-reorder": "^1.2.2",
     "@payload-enchants/translator": "^1.2.2",
-    "@payloadcms/db-postgres": "3.0.0-beta.74",
-    "@payloadcms/email-nodemailer": "3.0.0-beta.74",
-    "@payloadcms/next": "3.0.0-beta.74",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.74",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.74",
-    "@payloadcms/richtext-slate": "3.0.0-beta.74",
-    "@payloadcms/storage-s3": "3.0.0-beta.74",
-    "@payloadcms/ui": "3.0.0-beta.74",
+    "@payloadcms/db-postgres": "3.0.0-beta.77",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.77",
+    "@payloadcms/next": "3.0.0-beta.77",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.77",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.77",
+    "@payloadcms/richtext-slate": "3.0.0-beta.77",
+    "@payloadcms/storage-s3": "3.0.0-beta.77",
+    "@payloadcms/ui": "3.0.0-beta.77",
     "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "cross-env": "^7.0.3",
     "flatley": "^5.2.0",
     "graphql": "^16.8.2",
     "ky": "^1.5.0",
     "lodash-es": "^4.17.21",
-    "next": "15.0.0-canary.77",
+    "next": "15.0.0-canary.104",
     "nodemailer": "^6.9.14",
-    "payload": "3.0.0-beta.74",
-    "react": "19.0.0-rc-6230622a1a-20240610",
-    "react-dom": "19.0.0-rc-6230622a1a-20240610",
+    "payload": "3.0.0-beta.77",
+    "react": "^19.0.0-rc-06d0b89e-20240801",
+    "react-dom": "^19.0.0-rc-06d0b89e-20240801",
     "react-i18next": "^14.1.2",
     "react-router-dom": "5.3.4",
     "sharp": "0.32.6",
@@ -73,7 +73,7 @@
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.8",
     "tsx": "^4.16.5",
     "typescript": "^5.4.5"
   },
