--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate:create": "cross-env NODE_OPTIONS=--no-deprecation payload migrate:create && next lint --fix",
     "migrate": "cross-env NODE_OPTIONS=--no-deprecation payload migrate",
     "generate:types": "payload generate:types",
+    "generate:importMap": "payload generate:importMap",
     "standalone-script": "tsx ./src/scripts/standalone-script.ts",
     "up": "yarn upgrade-interactive",
     "self-update": "yarn set version latest && yarn"
@@ -24,28 +25,25 @@
     "node": ">=20.6.0"
   },
   "dependencies": {
-    "@payload-enchants/better-localized-fields": "^1.2.2",
     "@payload-enchants/docs-reorder": "^1.2.2",
-    "@payload-enchants/translator": "^1.2.2",
-    "@payloadcms/db-postgres": "3.0.0-beta.77",
-    "@payloadcms/email-nodemailer": "3.0.0-beta.77",
-    "@payloadcms/next": "3.0.0-beta.77",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.77",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.77",
-    "@payloadcms/richtext-slate": "3.0.0-beta.77",
-    "@payloadcms/storage-s3": "3.0.0-beta.77",
-    "@payloadcms/ui": "3.0.0-beta.77",
+    "@payloadcms/db-postgres": "3.0.0-beta.97",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.97",
+    "@payloadcms/next": "3.0.0-beta.97",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.97",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.97",
+    "@payloadcms/richtext-slate": "3.0.0-beta.97",
+    "@payloadcms/storage-s3": "3.0.0-beta.97",
+    "@payloadcms/ui": "3.0.0-beta.97",
     "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "cross-env": "^7.0.3",
-    "flatley": "^5.2.0",
     "graphql": "^16.8.2",
-    "ky": "^1.5.0",
+    "ky": "^1.7.1",
     "lodash-es": "^4.17.21",
     "next": "15.0.0-canary.104",
     "nodemailer": "^6.9.14",
-    "payload": "3.0.0-beta.77",
-    "react": "^19.0.0-rc-06d0b89e-20240801",
-    "react-dom": "^19.0.0-rc-06d0b89e-20240801",
+    "payload": "3.0.0-beta.97",
+    "react": "19.0.0-rc-06d0b89e-20240801",
+    "react-dom": "19.0.0-rc-06d0b89e-20240801",
     "react-i18next": "^14.1.2",
     "react-router-dom": "5.3.4",
     "sharp": "0.32.6",
@@ -53,28 +51,27 @@
   },
   "devDependencies": {
     "@swc/core": "1.5.7",
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.14",
+    "@types/node": "^20.16.3",
     "@types/nodemailer": "^6.4.15",
     "@types/prettier": "^3.0.0",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
-    "@types/react-router-dom": "5",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
+    "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.0.0-canary.53",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "postcss": "^8.4.40",
+    "eslint-plugin-prettier": "^5.2.1",
+    "postcss": "^8.4.43",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.8",
-    "tsx": "^4.16.5",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5"
   },
   "overrides": {
