--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:16
     container_name: postgres
     ports:
       - "5432:5432"
