--- a/package.json
+++ b/package.json
@@ -26,26 +26,25 @@
   },
   "dependencies": {
     "@payload-enchants/docs-reorder": "^1.2.2",
-    "@payloadcms/db-postgres": "3.0.0-beta.102",
-    "@payloadcms/email-nodemailer": "3.0.0-beta.102",
-    "@payloadcms/next": "3.0.0-beta.102",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.102",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.102",
-    "@payloadcms/richtext-slate": "3.0.0-beta.102",
-    "@payloadcms/storage-s3": "3.0.0-beta.102",
-    "@payloadcms/ui": "3.0.0-beta.102",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
+    "@payloadcms/db-postgres": "3.0.0-beta.110",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.110",
+    "@payloadcms/next": "3.0.0-beta.110",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.110",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.110",
+    "@payloadcms/richtext-slate": "3.0.0-beta.110",
+    "@payloadcms/storage-s3": "3.0.0-beta.110",
+    "@payloadcms/ui": "3.0.0-beta.110",
+    "babel-plugin-react-compiler": "0.0.0-experimental-48eb8f4-20240822",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.2",
-    "ky": "^1.7.1",
+    "ky": "^1.7.2",
     "lodash-es": "^4.17.21",
-    "next": "15.0.0-canary.104",
-    "nodemailer": "^6.9.14",
-    "payload": "3.0.0-beta.102",
-    "react": "19.0.0-rc-06d0b89e-20240801",
-    "react-dom": "19.0.0-rc-06d0b89e-20240801",
-    "react-i18next": "^14.1.2",
-    "react-router-dom": "5.3.4",
+    "next": "15.0.0-canary.160",
+    "nodemailer": "^6.9.15",
+    "payload": "3.0.0-beta.110",
+    "react": "19.0.0-rc-5dcb0097-20240918",
+    "react-dom": "19.0.0-rc-5dcb0097-20240918",
+    "react-i18next": "^14.1.3",
     "sharp": "0.32.6",
     "tslog": "^4.9.3"
   },
@@ -53,8 +52,8 @@
     "@swc/core": "1.5.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.16.3",
-    "@types/nodemailer": "^6.4.15",
+    "@types/node": "^20.16.10",
+    "@types/nodemailer": "^6.4.16",
     "@types/prettier": "^3.0.0",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
@@ -68,15 +67,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "postcss": "^8.4.43",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.4.5"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
+    "typescript": "5.5.4"
   },
   "overrides": {
-    "@types/react": "npm:types-react@19.0.0-beta.2",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-beta.2"
+    "@types/react": "npm:types-react@19.0.0-rc.0",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.5.0"
 }
