--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:compose:logs": "docker-compose -f docker-compose.dev.yml logs -f",
     "dev:compose:reset": "docker-compose -f docker-compose.dev.yml down -v",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
+    "build": "yarn run lint && cross-env NODE_OPTIONS=--no-deprecation next build",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation payload migrate && cross-env NODE_OPTIONS=--no-deprecation next start",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
@@ -26,30 +26,29 @@
   },
   "dependencies": {
     "@payload-enchants/docs-reorder": "^1.2.2",
-    "@payloadcms/db-postgres": "3.0.0-beta.110",
-    "@payloadcms/email-nodemailer": "3.0.0-beta.110",
-    "@payloadcms/next": "3.0.0-beta.110",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.110",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.110",
-    "@payloadcms/richtext-slate": "3.0.0-beta.110",
-    "@payloadcms/storage-s3": "3.0.0-beta.110",
-    "@payloadcms/ui": "3.0.0-beta.110",
+    "@payloadcms/db-postgres": "3.0.0-beta.113",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.113",
+    "@payloadcms/next": "3.0.0-beta.113",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.113",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.113",
+    "@payloadcms/richtext-slate": "3.0.0-beta.113",
+    "@payloadcms/storage-s3": "3.0.0-beta.113",
+    "@payloadcms/ui": "3.0.0-beta.113",
     "babel-plugin-react-compiler": "0.0.0-experimental-48eb8f4-20240822",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.2",
     "ky": "^1.7.2",
     "lodash-es": "^4.17.21",
-    "next": "15.0.0-canary.160",
+    "next": "15.0.0-canary.173",
     "nodemailer": "^6.9.15",
-    "payload": "3.0.0-beta.110",
-    "react": "19.0.0-rc-5dcb0097-20240918",
-    "react-dom": "19.0.0-rc-5dcb0097-20240918",
+    "payload": "3.0.0-beta.113",
+    "react": "19.0.0-rc-3edc000d-20240926",
+    "react-dom": "19.0.0-rc-3edc000d-20240926",
     "react-i18next": "^14.1.3",
     "sharp": "0.32.6",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
-    "@swc/core": "1.5.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.16.10",
