--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
