--- a/package.json
+++ b/package.json
@@ -22,30 +22,30 @@
     "self-update": "yarn set version latest && yarn"
   },
   "engines": {
-    "node": ">=20.6.0"
+    "node": ">=22.6.0"
   },
   "dependencies": {
     "@payload-enchants/docs-reorder": "^1.2.2",
-    "@payloadcms/db-postgres": "3.0.0-beta.113",
-    "@payloadcms/email-nodemailer": "3.0.0-beta.113",
-    "@payloadcms/next": "3.0.0-beta.113",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.113",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.113",
-    "@payloadcms/richtext-slate": "3.0.0-beta.113",
-    "@payloadcms/storage-s3": "3.0.0-beta.113",
-    "@payloadcms/ui": "3.0.0-beta.113",
+    "@payloadcms/db-postgres": "3.0.0-beta.123",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.123",
+    "@payloadcms/next": "3.0.0-beta.123",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.123",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.123",
+    "@payloadcms/richtext-slate": "3.0.0-beta.123",
+    "@payloadcms/storage-s3": "3.0.0-beta.123",
+    "@payloadcms/ui": "3.0.0-beta.123",
     "babel-plugin-react-compiler": "0.0.0-experimental-48eb8f4-20240822",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.2",
     "ky": "^1.7.2",
     "lodash-es": "^4.17.21",
-    "next": "15.0.0-canary.173",
-    "nodemailer": "^6.9.15",
-    "payload": "3.0.0-beta.113",
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926",
+    "next": "15.0.2",
+    "nodemailer": "^6.9.16",
+    "payload": "3.0.0-beta.123",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-i18next": "^14.1.3",
-    "sharp": "0.32.6",
+    "sharp": "0.33.5",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
@@ -69,7 +69,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.5.4"
   },
   "overrides": {
