--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     },
     "target": "ES2017"
   },
+  "files": ["./next.config.mjs"],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
@@ -41,5 +42,5 @@
   ],
   "exclude": [
     "node_modules"
-  ],
+  ]
 }
