--- a/package.json
+++ b/package.json
@@ -26,42 +26,42 @@
     "node": ">=22.6.0"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.4.0",
-    "@payloadcms/email-nodemailer": "3.4.0",
-    "@payloadcms/next": "3.4.0",
-    "@payloadcms/plugin-nested-docs": "3.4.0",
-    "@payloadcms/richtext-lexical": "3.4.0",
-    "@payloadcms/richtext-slate": "3.4.0",
-    "@payloadcms/storage-s3": "3.4.0",
-    "@payloadcms/ui": "3.4.0",
-    "babel-plugin-react-compiler": "0.0.0-experimental-48eb8f4-20240822",
+    "@payloadcms/db-postgres": "3.7.0",
+    "@payloadcms/email-nodemailer": "3.7.0",
+    "@payloadcms/next": "3.7.0",
+    "@payloadcms/plugin-nested-docs": "3.7.0",
+    "@payloadcms/richtext-lexical": "3.7.0",
+    "@payloadcms/richtext-slate": "3.7.0",
+    "@payloadcms/storage-s3": "3.7.0",
+    "@payloadcms/ui": "3.7.0",
+    "babel-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
     "cross-env": "^7.0.3",
-    "graphql": "^16.8.2",
-    "ky": "^1.7.2",
+    "graphql": "^16.10.0",
+    "ky": "^1.7.3",
     "lodash-es": "^4.17.21",
-    "next": "15.0.3",
+    "next": "15.1.0",
     "nodemailer": "^6.9.16",
-    "payload": "3.4.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-i18next": "^14.1.3",
+    "payload": "3.7.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-i18next": "^15.2.0",
     "sharp": "0.33.5",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "npm:types-react@19.0.0-rc.0",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "8.17.0",
-    "@typescript-eslint/parser": "8.17.0",
+    "@typescript-eslint/eslint-plugin": "8.18.0",
+    "@typescript-eslint/parser": "8.18.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.1.0",
     "eslint-plugin-jsonc": "^2.18.2",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
