--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "dev:compose:up": "docker-compose -f docker-compose.dev.yml up -d",
-    "dev:compose:down": "docker-compose -f docker-compose.dev.yml down",
-    "dev:compose:logs": "docker-compose -f docker-compose.dev.yml logs -f",
-    "dev:compose:reset": "docker-compose -f docker-compose.dev.yml down -v",
+    "dev:compose:up": "docker compose -f docker-compose.dev.yml up -d",
+    "dev:compose:down": "docker compose -f docker-compose.dev.yml down",
+    "dev:compose:logs": "docker compose -f docker-compose.dev.yml logs -f",
+    "dev:compose:reset": "docker compose -f docker-compose.dev.yml down -v",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "build": "yarn run lint && cross-env NODE_OPTIONS=--no-deprecation next build",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
@@ -26,48 +26,48 @@
     "node": ">=22.6.0"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.7.0",
-    "@payloadcms/email-nodemailer": "3.7.0",
-    "@payloadcms/next": "3.7.0",
-    "@payloadcms/plugin-nested-docs": "3.7.0",
-    "@payloadcms/richtext-lexical": "3.7.0",
-    "@payloadcms/richtext-slate": "3.7.0",
-    "@payloadcms/storage-s3": "3.7.0",
-    "@payloadcms/ui": "3.7.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
+    "@payloadcms/db-postgres": "3.18.0",
+    "@payloadcms/email-nodemailer": "3.18.0",
+    "@payloadcms/next": "3.18.0",
+    "@payloadcms/plugin-nested-docs": "3.18.0",
+    "@payloadcms/richtext-lexical": "3.18.0",
+    "@payloadcms/richtext-slate": "3.18.0",
+    "@payloadcms/storage-s3": "3.18.0",
+    "@payloadcms/ui": "3.18.0",
+    "babel-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
     "cross-env": "^7.0.3",
     "graphql": "^16.10.0",
-    "ky": "^1.7.3",
+    "ky": "^1.7.4",
     "lodash-es": "^4.17.21",
-    "next": "15.1.0",
+    "next": "15.1.5",
     "nodemailer": "^6.9.16",
-    "payload": "3.7.0",
+    "payload": "3.18.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-i18next": "^15.2.0",
+    "react-i18next": "^15.4.0",
     "sharp": "0.33.5",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "8.18.0",
-    "@typescript-eslint/parser": "8.18.0",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.0",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "15.1.5",
     "eslint-plugin-jsonc": "^2.18.2",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.16",
-    "typescript": "5.6.3"
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.3"
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.0",
