fix clone, fix breaking bugs

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "dev:compose:up": "docker compose -f docker-compose.dev.yml up -d",
-    "dev:compose:down": "docker compose -f docker-compose.dev.yml down",
-    "dev:compose:logs": "docker compose -f docker-compose.dev.yml logs -f",
-    "dev:compose:reset": "docker compose -f docker-compose.dev.yml down -v",
+    "services:start": "docker compose -f docker-compose.dev.yml up -d --remove-orphans",
+    "services:stop": "docker compose -f docker-compose.dev.yml down --remove-orphans",
+    "services:destroy": "docker compose -f docker-compose.dev.yml down --volumes --remove-orphans",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "build": "yarn run lint && cross-env NODE_OPTIONS=--no-deprecation next build",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
@@ -26,22 +25,22 @@
     "node": ">=22.6.0"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.22.0",
-    "@payloadcms/email-nodemailer": "3.22.0",
-    "@payloadcms/next": "3.22.0",
-    "@payloadcms/plugin-nested-docs": "3.22.0",
-    "@payloadcms/richtext-lexical": "3.22.0",
-    "@payloadcms/richtext-slate": "3.22.0",
-    "@payloadcms/storage-s3": "3.22.0",
-    "@payloadcms/ui": "3.22.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
+    "@payloadcms/db-postgres": "3.23.0",
+    "@payloadcms/email-nodemailer": "3.23.0",
+    "@payloadcms/next": "3.23.0",
+    "@payloadcms/plugin-nested-docs": "3.23.0",
+    "@payloadcms/richtext-lexical": "3.23.0",
+    "@payloadcms/richtext-slate": "3.23.0",
+    "@payloadcms/storage-s3": "3.23.0",
+    "@payloadcms/ui": "3.23.0",
+    "babel-plugin-react-compiler": "19.0.0-beta-21e868a-20250216",
     "cross-env": "^7.0.3",
     "graphql": "^16.10.0",
-    "ky": "^1.7.4",
+    "ky": "^1.7.5",
     "lodash-es": "^4.17.21",
-    "next": "15.1.6",
+    "next": "15.1.7",
     "nodemailer": "^6.10.0",
-    "payload": "3.22.0",
+    "payload": "3.23.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.0",
@@ -51,20 +50,20 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "8.23.0",
-    "@typescript-eslint/parser": "8.23.0",
+    "@typescript-eslint/eslint-plugin": "8.24.0",
+    "@typescript-eslint/parser": "8.24.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "15.1.7",
     "eslint-plugin-jsonc": "^2.19.1",
-    "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "postcss": "^8.5.2",
+    "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
