--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation payload migrate && cross-env NODE_OPTIONS=--no-deprecation next start",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
-    "prettier": "prettier --write .",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css}\"",
     "migrate:create": "cross-env NODE_OPTIONS=--no-deprecation payload migrate:create && next lint --fix",
     "migrate": "cross-env NODE_OPTIONS=--no-deprecation payload migrate",
     "generate:types": "payload generate:types",
@@ -25,52 +25,47 @@
     "node": ">=22.6.0"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.29.0",
-    "@payloadcms/email-nodemailer": "3.29.0",
-    "@payloadcms/next": "3.29.0",
-    "@payloadcms/plugin-nested-docs": "3.29.0",
-    "@payloadcms/richtext-lexical": "3.29.0",
-    "@payloadcms/richtext-slate": "3.29.0",
-    "@payloadcms/storage-s3": "3.29.0",
-    "@payloadcms/ui": "3.29.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
+    "@payloadcms/db-postgres": "3.37.0",
+    "@payloadcms/email-nodemailer": "3.37.0",
+    "@payloadcms/next": "3.37.0",
+    "@payloadcms/plugin-nested-docs": "3.37.0",
+    "@payloadcms/richtext-lexical": "3.37.0",
+    "@payloadcms/richtext-slate": "3.37.0",
+    "@payloadcms/storage-s3": "3.37.0",
+    "@payloadcms/ui": "3.37.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "cross-env": "^7.0.3",
-    "graphql": "^16.10.0",
-    "ky": "^1.7.5",
+    "graphql": "^16.11.0",
+    "ky": "^1.8.1",
     "lodash-es": "^4.17.21",
-    "next": "15.2.3",
-    "nodemailer": "^6.10.0",
-    "payload": "3.29.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-i18next": "^15.4.1",
-    "sharp": "0.33.5",
+    "next": "15.3.1",
+    "nodemailer": "^6.10.1",
+    "payload": "3.37.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-i18next": "^15.5.1",
+    "sharp": "0.34.1",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.13.12",
+    "@types/node": "^22.15.12",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "8.27.0",
-    "@typescript-eslint/parser": "8.27.0",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "8.32.0",
+    "@typescript-eslint/parser": "8.32.0",
     "autoprefixer": "^10.4.21",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "15.2.3",
-    "eslint-plugin-jsonc": "^2.19.1",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.1",
+    "eslint-plugin-jsonc": "^2.20.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.8.2"
+    "typescript": "5.8.3"
   },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.0",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0"
-  },
-  "packageManager": "yarn@4.5.3"
+  "packageManager": "yarn@4.9.1"
 }
