--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 20
-      - name: Trying to install dependencies and build the application
-        run: |
-          yarn --version
-          yarn install
-          yarn run build
+          node-version: 22
+      - name: Check yarn version
+        run: yarn --version
+      - name: Install dependencies
+        run: yarn install
+      - name: Run tests
+        run: yarn run test
+      - name: Build application
+        run: yarn run build
