--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "yarn run lint && cross-env NODE_OPTIONS=--no-deprecation next build",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation payload migrate && cross-env NODE_OPTIONS=--no-deprecation next start",
-    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
+    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
+    "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css}\"",
     "migrate:create": "cross-env NODE_OPTIONS=--no-deprecation payload migrate:create && next lint --fix",
     "migrate": "cross-env NODE_OPTIONS=--no-deprecation payload migrate",
@@ -19,7 +20,10 @@
     "generate:importMap": "payload generate:importMap",
     "standalone-script": "tsx ./src/scripts/standalone-script.ts",
     "up": "yarn upgrade-interactive",
-    "self-update": "yarn set version latest && yarn"
+    "self-update": "yarn set version latest && yarn",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
   "engines": {
     "node": ">=22.6.0"
@@ -38,8 +42,8 @@
     "graphql": "^16.11.0",
     "ky": "^1.8.1",
     "lodash-es": "^4.17.21",
-    "next": "15.3.1",
-    "nodemailer": "^6.10.1",
+    "next": "15.3.2",
+    "nodemailer": "^7.0.3",
     "payload": "3.37.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -49,8 +53,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.15.12",
+    "@types/node": "^22.15.17",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
@@ -59,12 +64,15 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "15.3.2",
     "eslint-plugin-jsonc": "^2.20.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.2",
     "typescript": "5.8.3"
   },
   "packageManager": "yarn@4.9.1"
