--- a/package.json
+++ b/package.json
@@ -26,53 +26,55 @@
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
   "engines": {
-    "node": ">=22.6.0"
+    "node": ">=24"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.37.0",
-    "@payloadcms/email-nodemailer": "3.37.0",
-    "@payloadcms/next": "3.37.0",
-    "@payloadcms/plugin-nested-docs": "3.37.0",
-    "@payloadcms/richtext-lexical": "3.37.0",
-    "@payloadcms/richtext-slate": "3.37.0",
-    "@payloadcms/storage-s3": "3.37.0",
-    "@payloadcms/ui": "3.37.0",
-    "babel-plugin-react-compiler": "19.1.0-rc.1",
+    "@payloadcms/db-postgres": "3.39.1",
+    "@payloadcms/email-nodemailer": "3.39.1",
+    "@payloadcms/next": "3.39.1",
+    "@payloadcms/plugin-nested-docs": "3.39.1",
+    "@payloadcms/richtext-lexical": "3.39.1",
+    "@payloadcms/richtext-slate": "3.39.1",
+    "@payloadcms/storage-s3": "3.39.1",
+    "@payloadcms/ui": "3.39.1",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "cross-env": "^7.0.3",
+    "form-data": "^4.0.2",
     "graphql": "^16.11.0",
     "ky": "^1.8.1",
     "lodash-es": "^4.17.21",
     "next": "15.3.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
-    "payload": "3.37.0",
+    "payload": "3.39.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^15.5.1",
-    "sharp": "0.34.1",
+    "react-i18next": "^15.5.2",
+    "sharp": "^0.34.2",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.1.4",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.2",
-    "eslint-plugin-jsonc": "^2.20.0",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "15.4.0-canary.53",
+    "eslint-plugin-jsonc": "^2.20.1",
     "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
+    "jest-environment-node": "30.0.0-beta.4",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.3.2",
+    "ts-jest": "^29.3.4",
     "typescript": "5.8.3"
   },
   "packageManager": "yarn@4.9.1"
