--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@payloadcms/ui": "3.40.0",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "cross-env": "^7.0.3",
+    "deepl-node": "^1.18.0",
     "form-data": "^4.0.2",
     "graphql": "^16.11.0",
+    "he": "^1.2.0",
     "ky": "^1.8.1",
     "lodash-es": "^4.17.21",
     "next": "15.3.3",
@@ -56,21 +58,22 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/he": "^1.2.3",
     "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.15.29",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "@typescript-eslint/eslint-plugin": "8.33.0",
-    "@typescript-eslint/parser": "8.33.0",
+    "@typescript-eslint/eslint-plugin": "8.33.1",
+    "@typescript-eslint/parser": "8.33.1",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "eslint": "^9.28.0",
-    "eslint-config-next": "15.4.0-canary.61",
+    "eslint-config-next": "15.3.3",
     "eslint-plugin-jsonc": "^2.20.1",
     "jest": "^29.7.0",
-    "jest-environment-node": "30.0.0-beta.5",
+    "jest-environment-node": "30.0.0-beta.3",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
