--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "node": ">=24"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.40.0",
-    "@payloadcms/email-nodemailer": "3.40.0",
-    "@payloadcms/next": "3.40.0",
-    "@payloadcms/plugin-nested-docs": "3.40.0",
-    "@payloadcms/richtext-lexical": "3.40.0",
-    "@payloadcms/richtext-slate": "3.40.0",
-    "@payloadcms/storage-s3": "3.40.0",
-    "@payloadcms/ui": "3.40.0",
+    "@payloadcms/db-postgres": "3.42.0",
+    "@payloadcms/email-nodemailer": "3.42.0",
+    "@payloadcms/next": "3.42.0",
+    "@payloadcms/plugin-nested-docs": "3.42.0",
+    "@payloadcms/richtext-lexical": "3.42.0",
+    "@payloadcms/richtext-slate": "3.42.0",
+    "@payloadcms/storage-s3": "3.42.0",
+    "@payloadcms/ui": "3.42.0",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "cross-env": "^7.0.3",
     "deepl-node": "^1.18.0",
-    "form-data": "^4.0.2",
+    "form-data": "^4.0.3",
     "graphql": "^16.11.0",
     "he": "^1.2.0",
     "ky": "^1.8.1",
@@ -48,10 +48,10 @@
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
-    "payload": "3.40.0",
+    "payload": "3.42.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^15.5.2",
+    "react-i18next": "^15.5.3",
     "sharp": "^0.34.2",
     "tslog": "^4.9.3"
   },
@@ -61,24 +61,24 @@
     "@types/he": "^1.2.3",
     "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.15.29",
+    "@types/node": "^24.0.1",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
-    "@typescript-eslint/eslint-plugin": "8.33.1",
-    "@typescript-eslint/parser": "8.33.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "8.34.0",
+    "@typescript-eslint/parser": "8.34.0",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
-    "eslint": "^9.28.0",
+    "eslint": "^9.29.0",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-jsonc": "^2.20.1",
-    "jest": "^29.7.0",
-    "jest-environment-node": "30.0.0-beta.3",
-    "postcss": "^8.5.4",
+    "jest": "^30.0.0",
+    "jest-environment-node": "30.0.0",
+    "postcss": "^8.5.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.3.4",
+    "ts-jest": "^29.4.0",
     "typescript": "5.8.3"
   },
   "packageManager": "yarn@4.9.1"
