--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
 .env
 !next-env.d.ts
-
 /media
-
 .yarn/cache
+
+.claude
+CLAUDE.md
