--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "generate:types": "payload generate:types",
     "generate:importMap": "payload generate:importMap",
     "standalone-script": "tsx ./src/scripts/standalone-script.ts",
+    "email:dev": "email dev",
+    "email:export": "email export",
     "typecheck": "npx tsc --noEmit",
     "up": "yarn upgrade-interactive",
     "self-update": "yarn set version latest && yarn",
@@ -38,10 +40,12 @@
     "@payloadcms/richtext-slate": "3.52.0",
     "@payloadcms/storage-s3": "3.52.0",
     "@payloadcms/ui": "3.52.0",
+    "@react-email/components": "^0.5.0",
+    "@react-email/render": "^1.2.0",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "cross-env": "^10.0.0",
     "deepl-node": "^1.19.0",
-    "es-toolkit": "^1.39.9",
+    "es-toolkit": "^1.39.10",
     "form-data": "^4.0.4",
     "graphql": "^16.11.0",
     "he": "^1.2.0",
@@ -54,6 +58,7 @@
     "payload": "3.52.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-email": "^4.2.8",
     "react-i18next": "^15.6.1",
     "sharp": "^0.34.3",
     "tslog": "^4.9.3",
@@ -66,7 +71,7 @@
     "@types/jest": "^30.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.3.0",
-    "@types/nodemailer": "^6.4.18",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "8.39.1",
