lint, prettify, origin env var

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 POSTGRES_URI=postgres://swiss-parcs-ims:swiss-parcs-ims@localhost:5432/swiss-parcs-ims
 PAYLOAD_SECRET=secret
+ORIGIN=http://localhost:3000
 
 S3_ENDPOINT=http://localhost:9000
 S3_BUCKET=swiss-parcs-ims
